// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsDialog > Snapshot Tests > should render default state correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Settings                                                                                       │
│                                                                                                  │
│ ▲                                                                                                │
│ ● Vim Mode                                             false                                     │
│                                                                                                  │
│   Disable Auto Update                                  false                                     │
│                                                                                                  │
│   Enable Prompt Completion                             false                                     │
│                                                                                                  │
│   Debug Keystroke Logging                              false                                     │
│                                                                                                  │
│   Output Format                                        Text                                      │
│                                                                                                  │
│   Hide Window Title                                    false                                     │
│                                                                                                  │
│   Show Status in Title                                 false                                     │
│                                                                                                  │
│   Hide Tips                                            false                                     │
│                                                                                                  │
│   Hide Context Summary                                 false                                     │
│                                                                                                  │
│   Hide CWD                                             false                                     │
│                                                                                                  │
│   Hide Sandbox Status                                  false                                     │
│                                                                                                  │
│   Hide Model Info                                      false                                     │
│                                                                                                  │
│   Hide Footer                                          false                                     │
│                                                                                                  │
│   Show Memory Usage                                    false                                     │
│                                                                                                  │
│   Show Line Numbers                                    false                                     │
│                                                                                                  │
│   Show Citations                                       false                                     │
│                                                                                                  │
│   Disable Loading Phrases                              false                                     │
│                                                                                                  │
│   Screen Reader Mode                                   undefined                                 │
│                                                                                                  │
│   IDE Mode                                             false                                     │
│                                                                                                  │
│   Max Session Turns                                    -1                                        │
│                                                                                                  │
│   Skip Next Speaker Check                              true                                      │
│                                                                                                  │
│   Memory Discovery Max Dirs                            200                                       │
│                                                                                                  │
│   Load Memory From Include Directories                 false                                     │
│                                                                                                  │
│   Respect .gitignore                                   true                                      │
│                                                                                                  │
│   Respect .geminiignore                                true                                      │
│                                                                                                  │
│   Enable Recursive File Search                         true                                      │
│                                                                                                  │
│   Disable Fuzzy Search                                 false                                     │
│                                                                                                  │
│   Enable Interactive Shell                             false                                     │
│                                                                                                  │
│   Show Color                                           false                                     │
│                                                                                                  │
│   Auto Accept                                          false                                     │
│                                                                                                  │
│ ▼                                                                                                │
│                                                                                                  │
│                                                                                                  │
│   Apply To                                                                                       │
│ ● User Settings                                                                                  │
│   Workspace Settings                                                                             │
│   System Settings                                                                                │
│                                                                                                  │
│ (Use Enter to select, Tab to change focus)                                                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render focused on scope selector 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Settings                                                                                       │
│                                                                                                  │
│ ▲                                                                                                │
│ ● Vim Mode                                             false                                     │
│                                                                                                  │
│   Disable Auto Update                                  false                                     │
│                                                                                                  │
│   Enable Prompt Completion                             false                                     │
│                                                                                                  │
│   Debug Keystroke Logging                              false                                     │
│                                                                                                  │
│   Output Format                                        Text                                      │
│                                                                                                  │
│   Hide Window Title                                    false                                     │
│                                                                                                  │
│   Show Status in Title                                 false                                     │
│                                                                                                  │
│   Hide Tips                                            false                                     │
│                                                                                                  │
│   Hide Context Summary                                 false                                     │
│                                                                                                  │
│   Hide CWD                                             false                                     │
│                                                                                                  │
│   Hide Sandbox Status                                  false                                     │
│                                                                                                  │
│   Hide Model Info                                      false                                     │
│                                                                                                  │
│   Hide Footer                                          false                                     │
│                                                                                                  │
│   Show Memory Usage                                    false                                     │
│                                                                                                  │
│   Show Line Numbers                                    false                                     │
│                                                                                                  │
│   Show Citations                                       false                                     │
│                                                                                                  │
│   Disable Loading Phrases                              false                                     │
│                                                                                                  │
│   Screen Reader Mode                                   undefined                                 │
│                                                                                                  │
│   IDE Mode                                             false                                     │
│                                                                                                  │
│   Max Session Turns                                    -1                                        │
│                                                                                                  │
│   Skip Next Speaker Check                              true                                      │
│                                                                                                  │
│   Memory Discovery Max Dirs                            200                                       │
│                                                                                                  │
│   Load Memory From Include Directories                 false                                     │
│                                                                                                  │
│   Respect .gitignore                                   true                                      │
│                                                                                                  │
│   Respect .geminiignore                                true                                      │
│                                                                                                  │
│   Enable Recursive File Search                         true                                      │
│                                                                                                  │
│   Disable Fuzzy Search                                 false                                     │
│                                                                                                  │
│   Enable Interactive Shell                             false                                     │
│                                                                                                  │
│   Show Color                                           false                                     │
│                                                                                                  │
│   Auto Accept                                          false                                     │
│                                                                                                  │
│ ▼                                                                                                │
│                                                                                                  │
│                                                                                                  │
│   Apply To                                                                                       │
│ ● User Settings                                                                                  │
│   Workspace Settings                                                                             │
│   System Settings                                                                                │
│                                                                                                  │
│ (Use Enter to select, Tab to change focus)                                                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render with accessibility settings enabled 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Settings                                                                                       │
│                                                                                                  │
│ ▲                                                                                                │
│ ● Vim Mode                                             true*                                     │
│                                                                                                  │
│   Disable Auto Update                                  false                                     │
│                                                                                                  │
│   Enable Prompt Completion                             false                                     │
│                                                                                                  │
│   Debug Keystroke Logging                              false                                     │
│                                                                                                  │
│   Output Format                                        Text                                      │
│                                                                                                  │
│   Hide Window Title                                    false                                     │
│                                                                                                  │
│   Show Status in Title                                 false                                     │
│                                                                                                  │
│   Hide Tips                                            false                                     │
│                                                                                                  │
│   Hide Context Summary                                 false                                     │
│                                                                                                  │
│   Hide CWD                                             false                                     │
│                                                                                                  │
│   Hide Sandbox Status                                  false                                     │
│                                                                                                  │
│   Hide Model Info                                      false                                     │
│                                                                                                  │
│   Hide Footer                                          false                                     │
│                                                                                                  │
│   Show Memory Usage                                    true*                                     │
│                                                                                                  │
│   Show Line Numbers                                    true*                                     │
│                                                                                                  │
│   Show Citations                                       false                                     │
│                                                                                                  │
│   Disable Loading Phrases                              true*                                     │
│                                                                                                  │
│   Screen Reader Mode                                   true*                                     │
│                                                                                                  │
│   IDE Mode                                             false                                     │
│                                                                                                  │
│   Max Session Turns                                    -1                                        │
│                                                                                                  │
│   Skip Next Speaker Check                              true                                      │
│                                                                                                  │
│   Memory Discovery Max Dirs                            200                                       │
│                                                                                                  │
│   Load Memory From Include Directories                 false                                     │
│                                                                                                  │
│   Respect .gitignore                                   true                                      │
│                                                                                                  │
│   Respect .geminiignore                                true                                      │
│                                                                                                  │
│   Enable Recursive File Search                         true                                      │
│                                                                                                  │
│   Disable Fuzzy Search                                 false                                     │
│                                                                                                  │
│   Enable Interactive Shell                             false                                     │
│                                                                                                  │
│   Show Color                                           false                                     │
│                                                                                                  │
│   Auto Accept                                          false                                     │
│                                                                                                  │
│ ▼                                                                                                │
│                                                                                                  │
│                                                                                                  │
│   Apply To                                                                                       │
│ ● User Settings                                                                                  │
│   Workspace Settings                                                                             │
│   System Settings                                                                                │
│                                                                                                  │
│ (Use Enter to select, Tab to change focus)                                                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render with all boolean settings disabled 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Settings                                                                                       │
│                                                                                                  │
│ ▲                                                                                                │
│ ● Vim Mode                                             false*                                    │
│                                                                                                  │
│   Disable Auto Update                                  false*                                    │
│                                                                                                  │
│   Enable Prompt Completion                             false*                                    │
│                                                                                                  │
│   Debug Keystroke Logging                              false*                                    │
│                                                                                                  │
│   Output Format                                        Text                                      │
│                                                                                                  │
│   Hide Window Title                                    false*                                    │
│                                                                                                  │
│   Show Status in Title                                 false                                     │
│                                                                                                  │
│   Hide Tips                                            false*                                    │
│                                                                                                  │
│   Hide Context Summary                                 false                                     │
│                                                                                                  │
│   Hide CWD                                             false                                     │
│                                                                                                  │
│   Hide Sandbox Status                                  false                                     │
│                                                                                                  │
│   Hide Model Info                                      false                                     │
│                                                                                                  │
│   Hide Footer                                          false                                     │
│                                                                                                  │
│   Show Memory Usage                                    false*                                    │
│                                                                                                  │
│   Show Line Numbers                                    false*                                    │
│                                                                                                  │
│   Show Citations                                       false*                                    │
│                                                                                                  │
│   Disable Loading Phrases                              false*                                    │
│                                                                                                  │
│   Screen Reader Mode                                   false*                                    │
│                                                                                                  │
│   IDE Mode                                             false*                                    │
│                                                                                                  │
│   Max Session Turns                                    -1                                        │
│                                                                                                  │
│   Skip Next Speaker Check                              true                                      │
│                                                                                                  │
│   Memory Discovery Max Dirs                            200                                       │
│                                                                                                  │
│   Load Memory From Include Directories                 false*                                    │
│                                                                                                  │
│   Respect .gitignore                                   false*                                    │
│                                                                                                  │
│   Respect .geminiignore                                false*                                    │
│                                                                                                  │
│   Enable Recursive File Search                         false*                                    │
│                                                                                                  │
│   Disable Fuzzy Search                                 false*                                    │
│                                                                                                  │
│   Enable Interactive Shell                             false                                     │
│                                                                                                  │
│   Show Color                                           false                                     │
│                                                                                                  │
│   Auto Accept                                          false*                                    │
│                                                                                                  │
│ ▼                                                                                                │
│                                                                                                  │
│                                                                                                  │
│   Apply To                                                                                       │
│ ● User Settings                                                                                  │
│   Workspace Settings                                                                             │
│   System Settings                                                                                │
│                                                                                                  │
│ (Use Enter to select, Tab to change focus)                                                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render with different scope selected (System) 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Settings                                                                                       │
│                                                                                                  │
│ ▲                                                                                                │
│ ● Vim Mode (Modified in System)                        false                                     │
│                                                                                                  │
│   Disable Auto Update (Modified in System)             false                                     │
│                                                                                                  │
│   Enable Prompt Completion                             false                                     │
│                                                                                                  │
│   Debug Keystroke Logging                              false                                     │
│                                                                                                  │
│   Output Format                                        Text                                      │
│                                                                                                  │
│   Hide Window Title                                    false                                     │
│                                                                                                  │
│   Show Status in Title                                 false                                     │
│                                                                                                  │
│   Hide Tips                                            false                                     │
│                                                                                                  │
│   Hide Context Summary                                 false                                     │
│                                                                                                  │
│   Hide CWD                                             false                                     │
│                                                                                                  │
│   Hide Sandbox Status                                  false                                     │
│                                                                                                  │
│   Hide Model Info                                      false                                     │
│                                                                                                  │
│   Hide Footer                                          false                                     │
│                                                                                                  │
│   Show Memory Usage (Modified in System)               false                                     │
│                                                                                                  │
│   Show Line Numbers                                    false                                     │
│                                                                                                  │
│   Show Citations                                       false                                     │
│                                                                                                  │
│   Disable Loading Phrases                              false                                     │
│                                                                                                  │
│   Screen Reader Mode                                   undefined                                 │
│                                                                                                  │
│   IDE Mode                                             false                                     │
│                                                                                                  │
│   Max Session Turns                                    -1                                        │
│                                                                                                  │
│   Skip Next Speaker Check                              true                                      │
│                                                                                                  │
│   Memory Discovery Max Dirs                            200                                       │
│                                                                                                  │
│   Load Memory From Include Directories                 false                                     │
│                                                                                                  │
│   Respect .gitignore                                   true                                      │
│                                                                                                  │
│   Respect .geminiignore                                true                                      │
│                                                                                                  │
│   Enable Recursive File Search                         true                                      │
│                                                                                                  │
│   Disable Fuzzy Search                                 false                                     │
│                                                                                                  │
│   Enable Interactive Shell                             false                                     │
│                                                                                                  │
│   Show Color                                           false                                     │
│                                                                                                  │
│   Auto Accept                                          false                                     │
│                                                                                                  │
│ ▼                                                                                                │
│                                                                                                  │
│                                                                                                  │
│   Apply To                                                                                       │
│ ● User Settings                                                                                  │
│   Workspace Settings                                                                             │
│   System Settings                                                                                │
│                                                                                                  │
│ (Use Enter to select, Tab to change focus)                                                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render with different scope selected (Workspace) 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Settings                                                                                       │
│                                                                                                  │
│ ▲                                                                                                │
│ ● Vim Mode (Modified in Workspace)                     false                                     │
│                                                                                                  │
│   Disable Auto Update                                  false                                     │
│                                                                                                  │
│   Enable Prompt Completion                             false                                     │
│                                                                                                  │
│   Debug Keystroke Logging (Modified in Workspace)      false                                     │
│                                                                                                  │
│   Output Format                                        Text                                      │
│                                                                                                  │
│   Hide Window Title                                    false                                     │
│                                                                                                  │
│   Show Status in Title                                 false                                     │
│                                                                                                  │
│   Hide Tips                                            false                                     │
│                                                                                                  │
│   Hide Context Summary                                 false                                     │
│                                                                                                  │
│   Hide CWD                                             false                                     │
│                                                                                                  │
│   Hide Sandbox Status                                  false                                     │
│                                                                                                  │
│   Hide Model Info                                      false                                     │
│                                                                                                  │
│   Hide Footer                                          false                                     │
│                                                                                                  │
│   Show Memory Usage                                    false                                     │
│                                                                                                  │
│   Show Line Numbers                                    false                                     │
│                                                                                                  │
│   Show Citations                                       false                                     │
│                                                                                                  │
│   Disable Loading Phrases                              false                                     │
│                                                                                                  │
│   Screen Reader Mode                                   undefined                                 │
│                                                                                                  │
│   IDE Mode                                             false                                     │
│                                                                                                  │
│   Max Session Turns                                    -1                                        │
│                                                                                                  │
│   Skip Next Speaker Check                              true                                      │
│                                                                                                  │
│   Memory Discovery Max Dirs                            200                                       │
│                                                                                                  │
│   Load Memory From Include Directories                 false                                     │
│                                                                                                  │
│   Respect .gitignore                                   true                                      │
│                                                                                                  │
│   Respect .geminiignore                                true                                      │
│                                                                                                  │
│   Enable Recursive File Search                         true                                      │
│                                                                                                  │
│   Disable Fuzzy Search                                 false                                     │
│                                                                                                  │
│   Enable Interactive Shell                             false                                     │
│                                                                                                  │
│   Show Color                                           false                                     │
│                                                                                                  │
│   Auto Accept                                          false                                     │
│                                                                                                  │
│ ▼                                                                                                │
│                                                                                                  │
│                                                                                                  │
│   Apply To                                                                                       │
│ ● User Settings                                                                                  │
│   Workspace Settings                                                                             │
│   System Settings                                                                                │
│                                                                                                  │
│ (Use Enter to select, Tab to change focus)                                                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render with file filtering settings configured 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Settings                                                                                       │
│                                                                                                  │
│ ▲                                                                                                │
│ ● Vim Mode                                             false                                     │
│                                                                                                  │
│   Disable Auto Update                                  false                                     │
│                                                                                                  │
│   Enable Prompt Completion                             false                                     │
│                                                                                                  │
│   Debug Keystroke Logging                              false                                     │
│                                                                                                  │
│   Output Format                                        Text                                      │
│                                                                                                  │
│   Hide Window Title                                    false                                     │
│                                                                                                  │
│   Show Status in Title                                 false                                     │
│                                                                                                  │
│   Hide Tips                                            false                                     │
│                                                                                                  │
│   Hide Context Summary                                 false                                     │
│                                                                                                  │
│   Hide CWD                                             false                                     │
│                                                                                                  │
│   Hide Sandbox Status                                  false                                     │
│                                                                                                  │
│   Hide Model Info                                      false                                     │
│                                                                                                  │
│   Hide Footer                                          false                                     │
│                                                                                                  │
│   Show Memory Usage                                    false                                     │
│                                                                                                  │
│   Show Line Numbers                                    false                                     │
│                                                                                                  │
│   Show Citations                                       false                                     │
│                                                                                                  │
│   Disable Loading Phrases                              false                                     │
│                                                                                                  │
│   Screen Reader Mode                                   undefined                                 │
│                                                                                                  │
│   IDE Mode                                             false                                     │
│                                                                                                  │
│   Max Session Turns                                    -1                                        │
│                                                                                                  │
│   Skip Next Speaker Check                              true                                      │
│                                                                                                  │
│   Memory Discovery Max Dirs                            100*                                      │
│                                                                                                  │
│   Load Memory From Include Directories                 true*                                     │
│                                                                                                  │
│   Respect .gitignore                                   false*                                    │
│                                                                                                  │
│   Respect .geminiignore                                true*                                     │
│                                                                                                  │
│   Enable Recursive File Search                         false*                                    │
│                                                                                                  │
│   Disable Fuzzy Search                                 true*                                     │
│                                                                                                  │
│   Enable Interactive Shell                             false                                     │
│                                                                                                  │
│   Show Color                                           false                                     │
│                                                                                                  │
│   Auto Accept                                          false                                     │
│                                                                                                  │
│ ▼                                                                                                │
│                                                                                                  │
│                                                                                                  │
│   Apply To                                                                                       │
│ ● User Settings                                                                                  │
│   Workspace Settings                                                                             │
│   System Settings                                                                                │
│                                                                                                  │
│ (Use Enter to select, Tab to change focus)                                                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render with mixed boolean and number settings 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Settings                                                                                       │
│                                                                                                  │
│ ▲                                                                                                │
│ ● Vim Mode                                             false*                                    │
│                                                                                                  │
│   Disable Auto Update                                  true*                                     │
│                                                                                                  │
│   Enable Prompt Completion                             false                                     │
│                                                                                                  │
│   Debug Keystroke Logging                              false                                     │
│                                                                                                  │
│   Output Format                                        Text                                      │
│                                                                                                  │
│   Hide Window Title                                    false*                                    │
│                                                                                                  │
│   Show Status in Title                                 false                                     │
│                                                                                                  │
│   Hide Tips                                            false                                     │
│                                                                                                  │
│   Hide Context Summary                                 false                                     │
│                                                                                                  │
│   Hide CWD                                             false                                     │
│                                                                                                  │
│   Hide Sandbox Status                                  false                                     │
│                                                                                                  │
│   Hide Model Info                                      false                                     │
│                                                                                                  │
│   Hide Footer                                          false                                     │
│                                                                                                  │
│   Show Memory Usage                                    true*                                     │
│                                                                                                  │
│   Show Line Numbers                                    false                                     │
│                                                                                                  │
│   Show Citations                                       false                                     │
│                                                                                                  │
│   Disable Loading Phrases                              false                                     │
│                                                                                                  │
│   Screen Reader Mode                                   undefined                                 │
│                                                                                                  │
│   IDE Mode                                             false                                     │
│                                                                                                  │
│   Max Session Turns                                    100*                                      │
│                                                                                                  │
│   Skip Next Speaker Check                              false*                                    │
│                                                                                                  │
│   Memory Discovery Max Dirs                            500*                                      │
│                                                                                                  │
│   Load Memory From Include Directories                 false                                     │
│                                                                                                  │
│   Respect .gitignore                                   true                                      │
│                                                                                                  │
│   Respect .geminiignore                                true                                      │
│                                                                                                  │
│   Enable Recursive File Search                         true                                      │
│                                                                                                  │
│   Disable Fuzzy Search                                 false                                     │
│                                                                                                  │
│   Enable Interactive Shell                             false                                     │
│                                                                                                  │
│   Show Color                                           false                                     │
│                                                                                                  │
│   Auto Accept                                          false                                     │
│                                                                                                  │
│ ▼                                                                                                │
│                                                                                                  │
│                                                                                                  │
│   Apply To                                                                                       │
│ ● User Settings                                                                                  │
│   Workspace Settings                                                                             │
│   System Settings                                                                                │
│                                                                                                  │
│ (Use Enter to select, Tab to change focus)                                                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render with tools and security settings 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Settings                                                                                       │
│                                                                                                  │
│ ▲                                                                                                │
│ ● Vim Mode                                             false                                     │
│                                                                                                  │
│   Disable Auto Update                                  false                                     │
│                                                                                                  │
│   Enable Prompt Completion                             false                                     │
│                                                                                                  │
│   Debug Keystroke Logging                              false                                     │
│                                                                                                  │
│   Output Format                                        Text                                      │
│                                                                                                  │
│   Hide Window Title                                    false                                     │
│                                                                                                  │
│   Show Status in Title                                 false                                     │
│                                                                                                  │
│   Hide Tips                                            false                                     │
│                                                                                                  │
│   Hide Context Summary                                 false                                     │
│                                                                                                  │
│   Hide CWD                                             false                                     │
│                                                                                                  │
│   Hide Sandbox Status                                  false                                     │
│                                                                                                  │
│   Hide Model Info                                      false                                     │
│                                                                                                  │
│   Hide Footer                                          false                                     │
│                                                                                                  │
│   Show Memory Usage                                    false                                     │
│                                                                                                  │
│   Show Line Numbers                                    false                                     │
│                                                                                                  │
│   Show Citations                                       false                                     │
│                                                                                                  │
│   Disable Loading Phrases                              false                                     │
│                                                                                                  │
│   Screen Reader Mode                                   undefined                                 │
│                                                                                                  │
│   IDE Mode                                             false                                     │
│                                                                                                  │
│   Max Session Turns                                    50*                                       │
│                                                                                                  │
│   Skip Next Speaker Check                              true*                                     │
│                                                                                                  │
│   Memory Discovery Max Dirs                            200                                       │
│                                                                                                  │
│   Load Memory From Include Directories                 false                                     │
│                                                                                                  │
│   Respect .gitignore                                   true                                      │
│                                                                                                  │
│   Respect .geminiignore                                true                                      │
│                                                                                                  │
│   Enable Recursive File Search                         true                                      │
│                                                                                                  │
│   Disable Fuzzy Search                                 false                                     │
│                                                                                                  │
│   Enable Interactive Shell                             false                                     │
│                                                                                                  │
│   Show Color                                           false                                     │
│                                                                                                  │
│   Auto Accept                                          false*                                    │
│                                                                                                  │
│ ▼                                                                                                │
│                                                                                                  │
│                                                                                                  │
│   Apply To                                                                                       │
│ ● User Settings                                                                                  │
│   Workspace Settings                                                                             │
│   System Settings                                                                                │
│                                                                                                  │
│ (Use Enter to select, Tab to change focus)                                                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render with various boolean settings enabled 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Settings                                                                                       │
│                                                                                                  │
│ ▲                                                                                                │
│ ● Vim Mode                                             true*                                     │
│                                                                                                  │
│   Disable Auto Update                                  true*                                     │
│                                                                                                  │
│   Enable Prompt Completion                             true*                                     │
│                                                                                                  │
│   Debug Keystroke Logging                              true*                                     │
│                                                                                                  │
│   Output Format                                        Text                                      │
│                                                                                                  │
│   Hide Window Title                                    true*                                     │
│                                                                                                  │
│   Show Status in Title                                 false                                     │
│                                                                                                  │
│   Hide Tips                                            true*                                     │
│                                                                                                  │
│   Hide Context Summary                                 false                                     │
│                                                                                                  │
│   Hide CWD                                             false                                     │
│                                                                                                  │
│   Hide Sandbox Status                                  false                                     │
│                                                                                                  │
│   Hide Model Info                                      false                                     │
│                                                                                                  │
│   Hide Footer                                          false                                     │
│                                                                                                  │
│   Show Memory Usage                                    true*                                     │
│                                                                                                  │
│   Show Line Numbers                                    true*                                     │
│                                                                                                  │
│   Show Citations                                       true*                                     │
│                                                                                                  │
│   Disable Loading Phrases                              true*                                     │
│                                                                                                  │
│   Screen Reader Mode                                   true*                                     │
│                                                                                                  │
│   IDE Mode                                             true*                                     │
│                                                                                                  │
│   Max Session Turns                                    -1                                        │
│                                                                                                  │
│   Skip Next Speaker Check                              true                                      │
│                                                                                                  │
│   Memory Discovery Max Dirs                            200                                       │
│                                                                                                  │
│   Load Memory From Include Directories                 true*                                     │
│                                                                                                  │
│   Respect .gitignore                                   true*                                     │
│                                                                                                  │
│   Respect .geminiignore                                true*                                     │
│                                                                                                  │
│   Enable Recursive File Search                         true*                                     │
│                                                                                                  │
│   Disable Fuzzy Search                                 false*                                    │
│                                                                                                  │
│   Enable Interactive Shell                             false                                     │
│                                                                                                  │
│   Show Color                                           false                                     │
│                                                                                                  │
│   Auto Accept                                          true*                                     │
│                                                                                                  │
│ ▼                                                                                                │
│                                                                                                  │
│                                                                                                  │
│   Apply To                                                                                       │
│ ● User Settings                                                                                  │
│   Workspace Settings                                                                             │
│   System Settings                                                                                │
│                                                                                                  │
│ (Use Enter to select, Tab to change focus)                                                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
